don't try to raise unmapped input windows

or screenedges over unmapped
causes race with kscreenlocker

BUG: 303579
REVIEW: 105585
FIXED-IN: 4.10